Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46850

Missing qml-module in webchannel.pro

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.5.0 RC
    • WebChannel
    • None
    • 906d910415454d64ff0b021b06f0df422a8c82bd

      Building QtWebChannel fails with the following error:
      qmetaobjectpublisher.cpp:44:20: fatal error: QJSValue: No such file or directory
      #include <QJSValue>
      ^
      Fix this by adding qtdeclerative to QT variable in webchannel.pro

        For Gerrit Dashboard: QTBUG-46850
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            hundeboll Martin Hundebøll
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes